mobile line-brake fixed (#5604)
In the mobile view (media max 400px ), the text line "Installation >>" appears broken into smaller segments.

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -114,6 +114,7 @@
     0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  white-space: nowrap;
 }
 
 [data-theme="dark"] .pagination-nav__link {
